--- a/MMM-MyVideoPlayer.css
+++ b/MMM-MyVideoPlayer.css
@@ -1,5 +1,9 @@
+
+@import url('https://fonts.googleapis.com/css?family=Macondo+Swash+Caps');
+
 .MMM-MyVideoPlayer {
-  margin-bottom: 200px;
+	padding-bottom: 200px;
+	font-family: "Macondo Swash Caps", cursive;
 }
 
 .MMM-MyVideoPlayer .font {
@@ -8,32 +12,32 @@
   font-size: 40px;
 }
 
-.MMM-MyVideoPlayer .navigation-menu {
+.MMM-MyVideoPlayer .navMenu {
   display: flex;
   align-items: stretch;
 }
 
-.MMM-MyVideoPlayer .navigation-button {
+.MMM-MyVideoPlayer .navBtn {
   z-index: 1;
-  border: solid 2px #999;
+  border: solid 2px darkred;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #f4511e;
-  color: white;
-  padding: 16px 32px;
-  text-align: center;
-  font-size: 36px;
+  background-color: #000;
+  color: darkred;
+  font-size: 42px;
+  padding: 10px 0 10px 0;
   font-weight: 600;
-  margin: 4px 2px;
-  opacity: 0.6;
+  opacity: 1;
   transition: 0.3s;
 }
 
-.MMM-MyVideoPlayer .navigation-button:hover {
-  opacity: 1;
+.MMM-MyVideoPlayer .navBtn:hover {
+  opacity: 0.6;
+  color: #ff0000;
+  cursor: pointer;
 }
 
-.MMM-MyVideoPlayer .navigation-text {
+.MMM-MyVideoPlayer .navText {
   margin: -5px 0;
 }
