--- a/MMM-MyVideoPlayer.css
+++ b/MMM-MyVideoPlayer.css
@@ -1,36 +1,30 @@
-
 @import url('https://fonts.googleapis.com/css?family=Macondo+Swash+Caps');
 
 .MMM-MyVideoPlayer .player {
 	padding-bottom: 200px;
-	font-family: "Macondo Swash Caps", cursive;
 }
 
 .MMM-MyVideoPlayer .button {
+	width: 234px;
+	height: 117px;
 	z-index: 1;
-	border: solid 3px white;
-	font-family: "Macondo Swash Caps", cursive;
 	display: inline-block;
 	justify-content: center;
 	align-items: center;
-	background-color: #000;
-	color: white;
-	font-size: 32px;
-	padding: 10px 10px 10px 10px;
-	font-weight: 600;
 	opacity: 1;
 	transition: 0.3s;
 }
 
 .MMM-MyVideoPlayer .navMenu {
 	display: inline-block;
-	align-items: stretch;
+	align-items: center;
+	justify-content: center;
 	flex-direction: row;
 }
 
 .MMM-MyVideoPlayer .controls {
 	border: 2px solid darkgreen;
-	width: 1180px;
+	width: 1200px;
 	margin-left: auto;
 	margin-right: auto;
 	text-align: center;
@@ -49,6 +43,7 @@
 	opacity: 0.6;
 	color: #ff0000;
 	cursor: pointer;
+	border: solid 3px maroon;
 }
 
 .MMM-MyVideoPlayer .navText {
