--- a/MMM-MyVideoPlayer.css
+++ b/MMM-MyVideoPlayer.css
@@ -1,51 +1,42 @@
 @import url('https://fonts.googleapis.com/css?family=Macondo+Swash+Caps');
 
 .MMM-MyVideoPlayer .player {
-	padding-bottom: 200px;
-}
+	border: none;
+}}
 
 .MMM-MyVideoPlayer .button {
-	width: 234px;
-	height: 117px;
+	width: 75px;
+	height: 42px;
 	z-index: 1;
 	display: inline-block;
 	justify-content: center;
 	align-items: center;
 	opacity: 1;
 	transition: 0.3s;
-}
+	border: none;
+}}
 
 .MMM-MyVideoPlayer .navMenu {
 	display: inline-block;
 	align-items: center;
 	justify-content: center;
 	flex-direction: row;
-}
+	background: none;
+	border: none;
+}}
 
 .MMM-MyVideoPlayer .controls {
-	border: 2px solid darkgreen;
 	width: 1200px;
 	margin-left: auto;
 	margin-right: auto;
 	text-align: center;
 	margin-top: 5px;
 	padding-bottom: 3px;
-	border-radius: 7px;
-}
-
-.MMM-MyVideoPlayer .font {
-	padding: 10px 10px 10px 10px;
-	line-height: 105%;
-	font-size: 40px;
-}
+	border: none;
+}}
 
 .MMM-MyVideoPlayer .button:hover {
-	opacity: 0.6;
-	color: #ff0000;
+	opacity: 0.4;
 	cursor: pointer;
-	border: solid 3px maroon;
-}
-
-.MMM-MyVideoPlayer .navText {
-	margin: -5px 0;
-}
+	border: none;
+}}
